--- a/src/assets/css/global/variables.css
+++ b/src/assets/css/global/variables.css
@@ -34,7 +34,7 @@
 
 :root,
 :root[data-theme='light'] {
-  color-scheme: dark light;
+  color-scheme: light dark;
   --color-text: var(--color-base-dark);
   --color-bg: var(--color-base-light);
   --color-base: var(--color-base-highlight);
@@ -52,7 +52,7 @@
 /* Dark Color Scheme (System Preference) */
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-text: var(--color-base-light);
+    --color-text: var(--color-base-dark);
     --color-bg: var(--color-base-dark);
 
     /* less "intensity" with color-mix */
