--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -36,6 +36,7 @@
     {% if schema == 'blog' %}{%- include "schemas/blogpost-schema.njk" -%}{% endif %}
 
     <link rel="stylesheet" href="/assets/css/global.css?{{ assetHash }}" />
+    <a rel="me" href="https://thewalkingdeaf.social/@steve"></a>
 
     <!-- preloads -->
     <link
