Add linkback to mastodon for blog

--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -5,6 +5,8 @@ masonry: true
 
 <div class="wrapper">
   <header class="full | section" style="--spot-color: var(--color-primary)">
+    <a rel="me" href="https://thewalkingdeaf.social/@steve"></a>
+
     <!-- <div class="section__inner flow region">
       <h1 class="text-center text-base-light">{{ title }}</h1>
     </div> -->
