--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -5,6 +5,8 @@ masonry: true
 
 <article class="wrapper">
   <header class="full | section" style="--spot-color: var(--color-secondary)">
+    <a rel="me" href="https://thewalkingdeaf.social/@steve"></a>
+
     <!-- <div class="section__inner flow region" style="--region-space-top: var(--space-l)"> -->
       <h1 class="text-center text-base-light">{{ title }}</h1>
     <!-- </div>
