--- a/src/_includes/partials/meta-info.njk
+++ b/src/_includes/partials/meta-info.njk
@@ -22,7 +22,7 @@
 <!-- Disable automatic detection and formatting of possible phone numbers -->
 <meta name="format-detection" content="telephone=no" />
 <!-- supports both dark and light color schemes, page author prefers light as default. -->
-<meta name="color-scheme" content="dark light" />
+<meta name="color-scheme" content="light dark" />
 <!-- activates page transitions -->
 <meta name="view-transition" content="same-origin" />
 
