Update website URL

--- a/src/assets/css/blocks/external-link.css
+++ b/src/assets/css/blocks/external-link.css
@@ -1,6 +1,6 @@
 article
   [href^='http']:not([href*='localhost:8080']):not(
-    [href*='eleventy-excellent.netlify.app']
+    [href*='thewalkingdeaf.net']
   ):not(.button) {
   padding-inline-end: 0.8em;
 }
