--- a/src/assets/css/blocks/external-link.css
+++ b/src/assets/css/blocks/external-link.css
@@ -1,13 +1,13 @@
 article
   [href^='http']:not([href*='localhost:8080']):not(
-    [href*='thewalkingdeaf.net']
+    [href*='www.thewalkingdeaf.net']
   ):not(.button) {
   padding-inline-end: 0.8em;
 }
 
 article
   [href^='http']:not([href*='localhost:8080']):not(
-    [href*='thewalkingdeaf.net']
+    [href*='www.thewalkingdeaf.net']
   ):not(.no-indicator)::after {
   position: absolute;
   display: inline-block;
