--- a/src/_includes/partials/main-nav.njk
+++ b/src/_includes/partials/main-nav.njk
@@ -26,6 +26,7 @@
         >
       </li>
     {% endfor %}
+    <img src="https://api.netlify.com/api/v1/badges/f90e92e9-3841-41b2-b2ab-88366dce05a7/deploy-status"/>
   </ul>
 </nav>
 
