--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -5,8 +5,7 @@ masonry: true
 
 <div class="wrapper">
   <header class="full | section" style="--spot-color: var(--color-primary)">
-    <a rel="me" href="https://thewalkingdeaf.social/@steve"></a>
-
+    <link rel="me" href="https://thewalkingdeaf.social/@steve">
     <!-- <div class="section__inner flow region">
       <h1 class="text-center text-base-light">{{ title }}</h1>
     </div> -->
