--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -38,7 +38,7 @@
         {% for key, value in personal.platforms %}
           {% if value != "" %}
             <!-- regular platforms -->
-            <a href="{{ value }}" rel="me" href="https://thewalkingdeaf.social/@steve">
+            <a href="{{ value }}" rel="me">
               <span class="visually-hidden">{{ key | capitalize }}</span>
               <div aria-hidden="true">{% include 'svg/platform-' + key + '.svg' %}</div>
             </a>
