--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -8,6 +8,7 @@
     <!-- charset/http-equiv/viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="me" href="https://thewalkingdeaf.social/@steve"/>
 
     <!-- title -->
     <title>
