Move netlify badge

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -45,7 +45,9 @@
           {% endif %}
         {% endfor %}
       </nav>
+    <img src="https://api.netlify.com/api/v1/badges/f90e92e9-3841-41b2-b2ab-88366dce05a7/deploy-status"/>
     </div>
+
 
     <!-- theme switch -->
     {% include 'components/theme-switch.njk' %}
