Changes to index page

--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -5,7 +5,7 @@ masonry: true
 
 <article class="wrapper">
   <header class="full | section" style="--spot-color: var(--color-secondary)">
-    <a rel="me" href="https://thewalkingdeaf.social/@steve"></a>
+    <link rel="me" href="https://thewalkingdeaf.social/@steve">
 
     <!-- <div class="section__inner flow region" style="--region-space-top: var(--space-l)"> -->
       <h1 class="text-center text-base-light">{{ title }}</h1>
