--- a/src/_layouts/page.njk
+++ b/src/_layouts/page.njk
@@ -6,6 +6,8 @@ layout: base
   class="region wrapper flow prose"
   style="--region-space-top: var(--space-l)"
 >
-  <h1 class="gradient-text">{{ title }}</h1>
+  <div>
+    <h1 class="gradient-text">{{ title }}</h1>
+  </div>
   {{ content | safe }}
 </article>
