--- a/src/_includes/partials/meta-info.njk
+++ b/src/_includes/partials/meta-info.njk
@@ -47,7 +47,7 @@
 <meta
   property="og:image"
   content="{% if (layout == 'post') %}
-    {%- {{ meta.url }}/assets/og-images/{{ title | slugify }}-preview.jpeg -%}
+    {{ meta.url }}/assets/og-images/{{ title | slugify }}-preview.jpeg
   {% else %}
     {{ meta.url }}{{ meta.opengraph_default }}
   {% endif %}"
