Rmove spaces from og: properties

--- a/src/_includes/partials/meta-info.njk
+++ b/src/_includes/partials/meta-info.njk
@@ -46,19 +46,11 @@
 />
 <meta
   property="og:image"
-  content="{% if (layout == 'post') %}
-    {{ meta.url }}/assets/og-images/{{ title | slugify }}-preview.jpeg
-  {% else %}
-    {{ meta.url }}{{ meta.opengraph_default }}
-  {% endif %}"
+  content="{% if (layout == 'post') %}{{ meta.url }}/assets/og-images/{{ title | slugify }}-preview.jpeg{% else %}{{ meta.url }}{{ meta.opengraph_default }}{% endif %}"
 />
 <meta
   property="og:image:alt"
-  content="{% if (layout == 'post') %}
-    {{ title }}
-  {% else %}
-    {{ meta.opengraph_default_alt }}
-  {% endif %}"
+  content="{% if (layout == 'post') %}{{ title }}{% else %}{{ meta.opengraph_default_alt }}{% endif %}"
 />
 <meta
   property="og:description"
