--- a/src/_layouts/page.njk
+++ b/src/_layouts/page.njk
@@ -4,7 +4,7 @@ layout: base
 
 <article
   class="region wrapper flow prose"
-  style="--region-space-top: var(--space-l)"
+  style="--region-space-top: var(--space-xs)"
 >
   <div>
     <h1 class="gradient-text">{{ title }}</h1>
