--- a/src/assets/css/blocks/card.css
+++ b/src/assets/css/blocks/card.css
@@ -7,6 +7,34 @@
   max-inline-size: unset;
 }
 
+.pixelcard {
+  display: inline-flex;
+		flex-direction: column;
+		gap: var(--default-spacing);
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+		gap: var(--default-spacing-half); 
+
+		> * {
+			aspect-ratio: 2 / 3;
+		}
+
+		&[square] > * {
+			aspect-ratio: 1;
+		}
+
+		@media screen and (max-width: 499px) {
+			grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+.pixelitems {
+  display: flex;
+		flex-direction: row;
+		align-items:baseline;
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+		gap: var(--default-spacing);
+}
+
 .card ::selection {
   color: var(--color-dark);
   background-color: var(--color-secondary);
