--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -17,7 +17,7 @@ schema: blog
       credit
     %}
       <!-- credit -->
-      <p style="margin-top: -3%;" class="credit feature | text-step-min-1">© {{ credit }}</p>
+      <p style="color: orange; margin-top: -3%;" class="credit feature | text-step-min-1">© {{ credit }}</p>
     {% endif %}
 
     <p class="meta | cluster" style="--gutter: var(--space-xs-s)">
