--- a/src/assets/css/blocks/card.css
+++ b/src/assets/css/blocks/card.css
@@ -39,6 +39,18 @@
 		/* gap: var(--default-spacing); */
 }
 
+.pixelitems-nobot {
+  display: flex;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 0px;
+		flex-direction: row;
+		align-items: baseline;
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+		/* gap: var(--default-spacing); */
+}
+
 .card ::selection {
   color: var(--color-dark);
   background-color: var(--color-secondary);
