--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -30,6 +30,8 @@
       {{ jsthemetoggle | jsmin | safe }}
     </script>
 
+    <link href="/src/lightbox/css/lightbox.css" rel="stylesheet" />
+
     <!--  inline base schema -->
     {% include "schemas/base-schema.njk" %}
 
@@ -92,10 +94,7 @@
 
     <!-- everything else: meta tags, icons, open graph etc.  -->
     {% include "partials/meta-info.njk" %}
-
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/photoswipe/photoswipe.css" media="print" onload="this.media=&#39;all&#39;" />
-    <link rel="stylesheet" href="/css/photoswipe/skin/skin.css" media="print" onload="this.media=&#39;all&#39;" />
+    
   </head>
 
   <body class="{{ layout }}">
@@ -105,6 +104,6 @@
 
     {% include "partials/footer.njk" %}
 
- 
+    <script src="/src/dist/js/lightbox-plus-jquery.js"></script>
   </body>
 </html>
