--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -30,7 +30,7 @@
       {{ jsthemetoggle | jsmin | safe }}
     </script>
 
-    <link href="/src/lightbox/css/lightbox.css" rel="stylesheet" />
+    <link href="/lightbox/css/lightbox.css" rel="stylesheet" />
 
     <!--  inline base schema -->
     {% include "schemas/base-schema.njk" %}
@@ -104,6 +104,6 @@
 
     {% include "partials/footer.njk" %}
 
-    <script src="/src/dist/js/lightbox-plus-jquery.js"></script>
+    <script src="/lightbox/js/lightbox-plus-jquery.js"></script>
   </body>
 </html>
